fix(theme): use className to align center

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,9 @@ code {
 .rustic-align-self-center {
   align-self: center;
 }
+
+.rustic-chip-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
